# pcap-extractor

./: bun.lockb  package.json
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/Form/: Files.css  Files.tsx  Form.css  Form.tsx  Loading.css  Loading.tsx  PopUp.css  PopUp.tsx
src/scripts/: fileValidation.tsx
