[package]
name = "pcap-extractor"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pcap = "1.1.0"
nom = "7.1.3"
image = "0.24.7"
chrono = "0.4.31"
pnet = "0.34.0"
tempfile = "3.8.1"
zip = "0.6.6"
sha2 = "0.10.8"
regex = "1.10.2"
url = "2.5.0"
fork = "0.1"
printpdf = "0.5.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
