[package]
name = "pcap-extractor"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "1.3.1", features = ["http2"] }
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0"
pcap = "2.0.0"
nom = "7.1.3"
image = "0.24.7"
chrono = "0.4.31"
pnet = "0.34.0"
tempfile = "3.8.1"
zip = "0.6.6"
sha2 = "0.10.8"
regex = "1.10.2"
url = "2.5.0"
fork = "0.1"
printpdf = "0.5.0"
bytes = "1.6.0"
pcap-parser = "0.15.0"
infer = "0.16.0"
etherparse = "0.15.0"
h2 = "0.4.5"
http = "1.1.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
